--- a/skin/frontend/rwd/vidgryadki/css/typography.css
+++ b/skin/frontend/rwd/vidgryadki/css/typography.css
@@ -7,6 +7,8 @@ h1,
 .h1,
 .data-table th,
 .header-minicart .block-subtitle,
+.header-language-container,
+.page-header,
 .nav-primary a,
 .breadcrumbs li,
 .footer,
